# hams.ai

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  ReadMe.txt  patch_source_account.md  pyproject.toml  requirements.txt  schema_observability_2026.sql  test_agent.py  tmp_global_rename.py  tmp_rename_max.py
.github/workflows/: ci.yml  deploy.yml
agent/: __init__.py  api.py  api.py.bak  auth.py  dashboard_routes.py  doku_payout.py  main.py
agent/config/: __init__.py  settings.py
agent/core/: __init__.py  agent.py  checkpoint.py  error_handler.py  exceptions.py  loop_detector.py  memory.py  reasoning_loop.py  state.py  task_planner.py  zilf_action.py
agent/cost/: __init__.py  budget_guardrail.py  context_budget.py  context_state_machine.py  model_router.py  tool_truncation.py  windowing.py
agent/llm/: .hams_max_provider.py  .zilf_max_provider.py  __init__.py  anthropic_provider.py  base.py  glm_provider.py  google_provider.py  groq_provider.py  hams_max_agent.py  hams_max_base.py  hams_max_chat.py  hams_max_provider.py  hams_max_thinking.py  ollama_provider.py  openai_provider.py  router.py  together_provider.py  zilf_max_agent.py  zilf_max_base.py  zilf_max_chat.py  zilf_max_provider.py  zilf_max_thinking.py
agent/memory/: context_manager.py  episodic_memory.py  vector_store.py
agent/multi_agent/: __init__.py  message_bus.py  supervisor.py  worker.py
agent/output/: __init__.py  error_reporter.py  parser.py  schemas.py
agent/prompts/: __init__.py  error_recovery.py  react_template.py  system_prompt.txt  task_prompt.py
agent/sandbox/: __init__.py  docker_manager.py  escape_prevention.py  isolation.py
agent/static/: chat.css  chat.js  feedback.js
agent/templates/: chat.html  cli.html  dashboard.html  feedback.html  feedback_admin.html  feedback_admin_login.html  login.html  onboarding_suggestions.html  onboarding_topics.html  register.html
agent/tools/: __init__.py  base.py  code_executor.py  filesystem.py  registry.py  terminal.py  tool_calling.py  web_search.py
cli/: API_PATCH.py  README.md  package-lock.json  package.json
cli/lib/: client.js  server.js
config/: agent_config.yaml  logging_config.yaml  sandbox_config.yaml
data/: zilf.db
deployment/: docker-compose.prod.yml  nginx.conf
deployment/vscode_extension/: ai-coding-agent-0.1.0.vsix  extension.js  package.json
docker/: Dockerfile  Dockerfile.app  Dockerfile.dev  docker-compose.yml  sandbox_entrypoint.sh
docs/: environment_setup.md
examples/: basic_agent.py  hello_world_task.py
observability/: __init__.py  cost_tracker.py  dashboard.py  dashboard.py.bak  tracer.py
security/: audit_log.py  prompt_injection.py  seccomp_profile.json
tests/: conftest.py
tests/benchmarks/: metrics.py  run_swebench.py
tests/integration/: test_agent_e2e.py  (+1 more)
(+5 files in other folders)
