[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zilf-ai"
version = "0.1.0"
description = "Open-source autonomous coding assistant powered by Ollama, Groq, Gemini, or local LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [
    { name = "Alfiz Ilham", email = "alfizilham51@outlook.com" },
]
keywords = ["ai", "agent", "coding", "llm", "automation", "ollama", "groq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # LLM providers
    "groq>=0.13.0",
    "google-generativeai>=0.8.0",
    "ollama>=0.4.0",

    # Agent framework
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Memory / vector store
    "chromadb>=0.5.0",
    "sentence-transformers>=3.2.0",
    "tiktoken>=0.8.0",

    # Tools
    "tavily-python>=0.5.0",
    "docker>=7.1.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",

    # Config & utilities
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "tenacity>=9.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",      # for testing async HTTP
]
observability = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "streamlit>=1.39.0",  # local dashboard
]

[project.scripts]
agent = "agent.main:app"

[project.urls]
Repository = "https://github.com/alfizilham/zilf-ai"
Issues = "https://github.com/alfizilham/zilf-ai/issues"
Documentation = "https://github.com/alfizilham/zilf-ai/tree/main/docs"

# --- Tool configs ---

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: fast unit tests with no external dependencies",
    "integration: tests that call real APIs or Docker",
    "benchmark: SWE-bench and performance tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
